[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
fxhash = "0.2"
indoc = "2.0"
itertools = "0.12"
nom = "7.1"
rayon = "1.8"
paste = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bin]]
name = "aoc_2023"
path = "src/main.rs"

[[bench]]
name = "aoc_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1

